<resources>
    <string name="app_name">SnakRestaurant</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_nif">Nif</string>
    <string name="button_sign_in">Iniciar sess\ão</string>
    <string name="button_sign_up">Registe-se</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Esqueceu a password?</string>
    <string name="text_signin_message">inscreva-se na sua conta</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Ainda não tem conta?<b>registar agora</b></string>
    <string name="text_signup_terms">Ao inscrever-se, voc\ê concorda com o nosso <b>termos e condições</b></string>
    <string name="text_signup_message">Ol\á, vamos configurar a sua conta</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Numero de telemovel</string>
    <string name="hint_confirm_password">Confirmar Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="txt_signin">Já possui uma conta? Faça Login</string>

    <string name="txt_name_detalhes">nome</string>
    <string name="txt_price_detalhes">preço</string>
    <string name="txt_idcategory_detalhes">categoria</string>
    <string name="data_purchases">Data: </string>
    <string name="mesa_purchases">Mesa: </string>
    <string name="valor_purchases">Valor: </string>

    <string name="products_title">Products</string>
    <string name="data">Data:  </string>
    <string name="value">Valor:  </string>
    <string name="username_dois_pontos">Username: </string>
    <string name="numero_dois_pontos">Numero: </string>
    <string name="email_dois_pontos">Email: </string>
    <string name="Register_Message">Registo efetuado com sucesso</string>
    <string name="id_purchases">Numero: </string>
    <string name="Purchases_title">Compras</string>

    <!--Carrinho de compras-->
    <string name="shopping_card">Carrinho</string>
    <string name="id_product_shopping">id_product:</string>
    <string name="id_shopping">id_shopping:  </string>
    <string name="name_shopping">Nome:  </string>
    <string name="price_shopping">Preço:  </string>
    <string name="id_categoria">id_categoria:  </string>
    <string name="quantidade_shopping">Quantidade:  </string>

    <string name="informacao">Informações do pedido:  </string>
    <string name="mesa">Insira a mesa:  </string>
    <string name="numero_conta">Numero conta:  </string>

</resources>