<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/id_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_product_shopping"
            android:textColor="@color/md_blue_grey_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/id_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_shopping"
            android:textColor="@color/md_blue_grey_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_shopping"
            android:textColor="@color/md_blue_grey_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_shopping"
            android:textColor="@color/md_blue_grey_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/id_category_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_categoria"
            android:textColor="@color/md_blue_grey_50"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/quantidade_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantidade_shopping"
            android:textColor="@color/md_blue_grey_50"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_id_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorBackground"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_id_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorBackground"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_name_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBackground"
            android:text=""
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_price_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorBackground"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_id_category_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorBackground"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_quantidade_shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/colorBackground"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/button_delete"
            android:layout_width="204dp"
            android:layout_height="match_parent"
            android:text="delete" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>