<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".controllers.login_registo_vistas.SignupFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fillViewport="true"
        tools:context="in.insideandroid.template.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbarThumbHorizontal="@null"
            android:scrollbarThumbVertical="@null">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:text="@string/text_signup_message"
                    android:textColor="#696969"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_mail"
                        android:drawableLeft="@drawable/ic_mail"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:minWidth="320dp"
                        android:minHeight="45dp"
                        android:singleLine="true"
                        android:text="123@gmail.com"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_person"
                            android:drawableLeft="@drawable/ic_person"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_username"
                            android:imeOptions="actionNext"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:singleLine="true"
                            android:text="teste2" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_phone"
                            android:drawableLeft="@drawable/ic_phone"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_phone"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:singleLine="true"
                            android:text="999000999" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_nif"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_phone"
                            android:drawableLeft="@drawable/ic_phone"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_nif"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:singleLine="true"
                            android:text="999000999" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawableLeft="@drawable/ic_lock"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:text="password" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorTextInputBackground"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_confirm_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_lock"
                            android:drawableLeft="@drawable/ic_lock"
                            android:drawablePadding="12dp"
                            android:hint="@string/hint_confirm_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:minWidth="320dp"
                            android:minHeight="45dp"
                            android:text="password" />/>
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/button_signup"
                    style="@style/Button1"
                    android:layout_width="342dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:onClick="onClick"
                    android:text="@string/button_sign_up"
                    app:backgroundTint="@color/md_light_blue_800" />

                <LinearLayout
                    android:id="@+id/social_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/button_signin"
                        style="@style/TextButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:onClick="onClick"
                        android:padding="20dp"
                        android:text="@string/txt_signin"
                        android:textColor="@color/black" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/text_signup_terms"
                    android:textSize="13sp" />
            </LinearLayout>

        </RelativeLayout>


    </ScrollView>
</RelativeLayout>