<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground"
    android:textAlignment="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/iv_food"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/new_final_logo" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_food"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center"
                    android:text="@string/id_purchases"
                    android:textAlignment="viewEnd"
                    android:textColor="#eead5d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_id_cartao"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textAlignment="viewStart"
                    android:textColor="#eead5d"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/valor_purchases"
                    android:textAlignment="viewEnd"
                    android:textColor="#9a3a14 "
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_valor_cartao"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00"
                    android:textAlignment="viewStart"
                    android:textColor="#9a3a14 "
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/data_purchases"
                    android:textAlignment="viewEnd"
                    android:textColor="#eead5d"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_data_cartao"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="--/--/----"
                    android:textAlignment="viewStart"
                    android:textColor="#eead5d"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="@color/colorIcon"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>